k8s/nacos/nacos-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  generation: 15
  labels:
    app: nacos-server
  managedFields:
    - apiVersion: apps/v1
      operation: Update
    - apiVersion: apps/v1
      manager: kube-controller-manager
      operation: Update
      subresource: status
  name: nacos-server
  namespace: pt-dev
spec:
  podManagementPolicy: OrderedReady
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nacos-server
  serviceName: nacos-server-svc
  template:
    metadata:
      labels:
        app: nacos-server
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: nacos-server-config
          image: 'nacos/nacos-server:v2.4.3'
          imagePullPolicy: IfNotPresent
          name: nacos-server
          ports:
            - containerPort: 8848
              name: web
              protocol: TCP
            - containerPort: 7848
              name: g1
              protocol: TCP
            - containerPort: 9848
              name: g2
              protocol: TCP
            - containerPort: 9849
              name: g3
              protocol: TCP
          resources:
            limits:
              cpu: '0.6'
              ephemeral-storage: 2Gi
            requests:
              cpu: 400m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-server-svc
  namespace: pt-dev
spec:
  ports:
  - name: web
    port: 8848
    protocol: TCP
    targetPort: 8848
  - name: grbc
    port: 7848
    protocol: TCP
    targetPort: 7848
  - name: g2
    port: 9848
    protocol: TCP
    targetPort: 9848
  - name: g3
    port: 9849
    protocol: TCP
    targetPort: 9849
  selector:
    app: nacos-server
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nacos-lb
  namespace: pt-dev
spec:
  type: LoadBalancer
  loadBalancerSourceRanges:
  - 1.1.1.1/32
  ports:
  - port: 8848
    targetPort: 8848
    name: http-port
  - port: 7848
    targetPort: 7848
    name: grpc-port
  - port: 9848
    targetPort: 9848
    name: management-port
  selector:
    app: nacos-server
