k8s/nacos/nacos-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-lb
  namespace: pt-dev
spec:
  type: LoadBalancer
  loadBalancersourceRanges:
  - 1.1.1.1/32
  ports:
  - port: 8848
    targetPort: 8848
    name: http-port
  - port: 7848
    targetPort: 7848
    name: grpc-port
  - port: 9848
    targetPort: 9848
    name: management-port
  selector:
    app: nacos-server
