k8s/nacos/nacos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos-ingress
  namespace: pt-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gcp-nacos.pttech.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nacos-lb
            port:
              number: 8848
